--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 	<title>SNAKE GAME</title>
 </head>
 <body>
+	<style type="text/css">
+		html,
+		body {
+			margin: 0;
+			background-color: rgba(255,255,0, 0.3);
+		}
+	</style>
 	<script src="scripts/scripts.js"></script>
 </body>
 </html>
