--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			background-color: rgba(255,255,0, 0.3);
 		}
 	</style>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="scripts/scripts.js"></script>
 </body>
 </html>
