--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		body {
 			margin: 0;
 			background-color: rgba(255,255,0, 0.3);
+			overflow: hidden;
 		}
 	</style>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
